# CARLsim6

./: .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  Experiment_8h.html  Experiment_8h__dep__incl.map  Experiment_8h__dep__incl.md5  Experiment_8h__incl.map  Experiment_8h__incl.md5  Experiment_8h_source.html  Logger_8cpp.html  Logger_8cpp__incl.map  Logger_8cpp__incl.md5  Logger_8cpp_source.html  Logger_8h.html  Logger_8h__dep__incl.map  Logger_8h__dep__incl.md5  Logger_8h__incl.md5  Logger_8h_source.html  PTI_8cpp.html  PTI_8cpp__incl.map  PTI_8cpp__incl.md5  PTI_8cpp_source.html  PTI_8h.html  PTI_8h__dep__incl.map  PTI_8h__dep__incl.md5  PTI_8h__incl.map  PTI_8h__incl.md5  PTI_8h_source.html  ParameterInstances_8cpp.html  ParameterInstances_8cpp__incl.map  ParameterInstances_8cpp__incl.md5  ParameterInstances_8cpp_source.html  ParameterInstances_8h.html  ParameterInstances_8h__dep__incl.map  ParameterInstances_8h__dep__incl.md5  ParameterInstances_8h__incl.map  ParameterInstances_8h__incl.md5  ParameterInstances_8h_source.html  README.md  (+2809 more)
carlsim/: CMakeLists.txt  carlsim.mk  configure.mk  libcarlsim.mk
carlsim/benchmark/: CMakeLists.txt  benchmark_neurons.cpp  run_benchmark
carlsim/interface/: CMakeLists.txt
carlsim/interface/inc/: callback.h  callback_core.h  carlsim.h  carlsim_api.h  carlsim_conf.h.in  carlsim_conf_api.h  carlsim_datastructures.h  carlsim_definitions.h  carlsim_interface_api.h  execution_stopwatch.h  linear_algebra.h  poisson_rate.h  user_errors.h
carlsim/interface/src/: callback_core.cpp  carlsim.cpp  execution_stopwatch.cpp  poisson_rate.cpp
carlsim/kernel/: CMakeLists.txt
carlsim/kernel/inc/: carlsim_kernel_api.h  cuda_version_control.h  error_code.h  snn.h  snn_datastructures.h  snn_definitions.h  spike_buffer.h
carlsim/kernel/src/: print_snn_info.cpp  snn_cpu_module.cpp  snn_manager.cpp  spike_buffer.cpp
carlsim/monitor/: CMakeLists.txt  carlsim_monitor_api.h  connection_monitor.cpp  connection_monitor.h  connection_monitor_core.cpp  connection_monitor_core.h  group_monitor.cpp  group_monitor.h  group_monitor_core.cpp  group_monitor_core.h  neuron_monitor.cpp  neuron_monitor.h  neuron_monitor_core.cpp  neuron_monitor_core.h  spike_monitor.cpp  spike_monitor.h  spike_monitor_core.cpp  spike_monitor_core.h
carlsim/test/: CMakeLists.txt  coba.cpp  compartments.cpp  conn_mon.cpp  connect.cpp  core.cpp  cuba.cpp  exec_stopwatch.cpp  group_mon.cpp  interface.cpp  lif.cpp  main.cpp  poiss_rate.cpp  spike_gen.cpp  spike_mon.cpp  stdp.cpp  stp.cpp
carlsim/test6/: CMakeLists.txt  adk13.cpp  adk13_alpha1.cpp  main.cpp  mstp.cpp  nrn_mon.cpp  pka_plc_mod.cpp  receptors.cpp
carlsim/testadv/: CMakeLists.txt  axonplast2.cpp  ca3.cpp  connect_adv.cpp  main.cpp  multi_runtimes.cpp  nrngrps_limit.cpp  stdp_adv.cpp
carlsim/testca3/: CMakeLists.txt  ca3.cpp  ca3bc.cpp  ca3bc_bc.cpp  ca3cstp.cpp  ca3cstp_perf.cpp  ca3cstp_taud.cpp  ca3pc.cpp  ca3pc2_bc2.cpp  ca3pc_pc.cpp  ca3types.h  carlsim_tests.h  carlsim_tests_common.cpp  generateCONFIGStateSTP.h  main.cpp
doc/: CARLsimLayout.xml  (+5 more)
projects/: CMakeLists.txt  README.md
projects/asynchronous/ca3_snn_GPU_02_16_20_HC_IM_archetype/: CMakeLists.txt  generateCONFIGStateSTP.h  generateSETUPStateSTP.h
projects/asynchronous/ca3_snn_GPU_02_16_20_HC_IM_baseline/: CMakeLists.txt  generateCONFIGStateSTP.h
projects/asynchronous/ca3_snn_GPU_02_16_20_HC_IM_class/: CMakeLists.txt  generateCONFIGStateSTP.h
projects/benchmark1/: CMakeLists.txt
projects/benchmark1/src/: main_benchmark1.cpp
projects/benchmark2/: CMakeLists.txt
projects/benchmark2/src/: main_benchmark2.cpp
projects/benchmark2/standalone/: README.md
projects/benchmark3/: CMakeLists.txt  run_benchmark3  run_benchmark3.ps1
projects/benchmark3/src/: main_benchmark3.cpp
projects/benchmark4/: CMakeLists.txt
projects/benchmark4/src/: main_benchmark4.cpp
projects/benchmark4/standalone/: CMakeLists.txt
projects/benchmark5/: CMakeLists.txt  run_benchmark5_hpc
projects/benchmark5/src/: main_benchmark5.cpp
projects/benchmark6/: CMakeLists.txt  run_benchmark6.psh
projects/benchmark6/src/: main_benchmark6.cpp
projects/benchmarkA/: CMakeLists.txt
projects/benchmarkA/src/: main_benchmarkA.cpp
projects/benchmarkB/: CMakeLists.txt
projects/benchmarkB/src/: main_benchmarkB.cpp
projects/ca3_example_net/: CMakeLists.txt  README.md  generateCONFIGStateSTP.h  generateSETUPStateSTP.h
projects/ca3_example_net/src/: main_ca3_snn_GPU.cpp
projects/ca3_example_net_02_26_21/: CMakeLists.txt
projects/hello_world/: CMakeLists.txt
projects/hello_world/src/: main_hello_world.cpp
projects/hello_world/standalone/: CMakeLists.txt
projects/lif_izhi_random_spnet/src/: main_random_spnet.cpp
projects/pti_example/: Makefile  ecj_TuneFiringRates.params
projects/spike_generator/: CMakeLists.txt
projects/spike_generator/src/: main_spike_generator.cpp
projects/synchronous/ca3_snn_GPU_02_16_20_HC_IM_archetype/: CMakeLists.txt
projects/synchronous/ca3_snn_GPU_02_16_20_HC_IM_baseline/: CMakeLists.txt
projects/synchronous/ca3_snn_GPU_02_16_20_HC_IM_class/: CMakeLists.txt
projects/synchronous/ca3_snn_GPU_02_16_20_HC_IM_granule/: CMakeLists.txt  generateCONFIGStateSTP.h
tools/: CMakeLists.txt
tools/offline_analysis_toolbox/: CMakeLists.txt  ConnectionMonitor.m  ConnectionReader.m  GroupMonitor.m  GroupReader.m  NetworkMonitor.m  NeuronReader.m
tools/pti/: CMakeLists.txt  PTI.h  ParameterInstances.h  carlsim_pti_api.h
tools/simple_weight_tuner/: CMakeLists.txt  carlsim_simple_weight_tuner_api.h  simple_weight_tuner.cpp  simple_weight_tuner.h
tools/spike_generators/: CMakeLists.txt  carlsim_spike_generators_api.h  interactive_spikegen.cpp  interactive_spikegen.h  periodic_spikegen.cpp  periodic_spikegen.h  pre_post_group_spikegen.cpp  pre_post_group_spikegen.h  spikegen_from_file.cpp  spikegen_from_file.h  spikegen_from_vector.cpp  spikegen_from_vector.h
tools/stopwatch/: CMakeLists.txt  carlsim_stopwatch_api.h  stopwatch.cpp  stopwatch.h
tools/visual_stimulus/: CMakeLists.txt  carlsim_visual_stimulus_api.h  visual_stimulus.h
(+209 files in other folders)
